@@ -26,6 +26,11 @@
 // Dma0/1 in Mdec.c
 // Dma3   in CdRom.c
 
+void spuInterrupt() {
+    HW_DMA4_CHCR &= SWAP32(~0x01000000);
+    DMA_INTERRUPT(4);
+}
+
 void psxDma4(u32 madr, u32 bcr, u32 chcr) { // SPU
 	u16 *ptr;
 	u32 size;
@@ -43,7 +48,8 @@ void psxDma4(u32 madr, u32 bcr, u32 chcr) { // SPU
 				break;
 			}
 			SPU_writeDMAMem(ptr, (bcr >> 16) * (bcr & 0xffff) * 2);
-			break;
+            SPUDMA_INT((bcr >> 16) * (bcr & 0xffff) / 2);
+			return;
 
 		case 0x01000200: //spu to cpu transfer
 #ifdef PSXDMA_LOG
@@ -108,7 +114,6 @@ void psxDma2(u32 madr, u32 bcr, u32 chcr) { // GPU
 			GPU_writeDataMem(ptr, size);
 			GPUDMA_INT((size / 4));
 			return;
-//			break;
 
 		case 0x01000401: // dma chain
 #ifdef PSXDMA_LOG
